04_docker-registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  namespace: test-namespace
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: registry.cathaylife.com.tw
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-registry
          servicePort: 5000
